docs/NewStructure_admin/2. Установка и сопровождение/8. Безопасность платформы/015-admission-policy-engine/charts/constraint-templates/tests/disallowed-tags/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-disallowed-tags
tests:
  - name: operation-policy
    template: ../../templates/operation/disallowed-tags.yaml
    constraint: constraint.yaml
    cases:
      - name: example-allowed
        object: allowed.yaml
        assertions:
          - violations: no
      - name: example-disallowed
        object: disallowed.yaml
        assertions:
          - violations: yes
